--- a/indexCSS/page-header.css
+++ b/indexCSS/page-header.css
@@ -51,7 +51,7 @@
   font-size: 0.8em;
   font-family: "Roboto", sans-serif;
   margin-left: auto;
-  padding-top: 1em;
+  padding-top: 0.5em;
 }
 
 .page-navigation a {
@@ -60,6 +60,8 @@
   white-space: nowrap;
   border-bottom: 2px solid transparent;
   transition: border-bottom 0.3s ease, color 0.3s ease;
+  display: flex;
+  align-items: center;
 }
 
 .page-navigation a:hover {
@@ -121,4 +123,13 @@
 
 .dropdown-content a:hover {
   background-color: #4a7a91;
+}
+
+.dropdown a h3 {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown a h3 svg {
+  margin-left: 0.5em;
 }
