--- a/indexCSS/services.css
+++ b/indexCSS/services.css
@@ -1,9 +1,10 @@
 .services-section {
-  padding: 2em;
+  padding-top: 3em;
+  padding-bottom: 3em;
   background-color: #f9f9f9;
   display: flex;
   justify-content: center;
-  margin: 2em auto;
+  margin: auto;
 }
 
 .services-content {
