--- a/indexCSS/page-header.css
+++ b/indexCSS/page-header.css
@@ -133,3 +133,45 @@
 .dropdown a h3 svg {
   margin-left: 0.5em;
 }
+
+@media (max-width: 768px) {
+  .header-container {
+    width: 100%;
+    justify-content: space-between;
+    padding: 1em;
+  }
+
+  .page-navigation {
+    display: none;
+    position: fixed;
+    top: 60px;
+    right: 0;
+    background-color: #5f8aa3;
+    width: 100%;
+    flex-direction: column;
+    gap: 1em;
+    padding: 2em;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 9;
+  }
+
+  .page-navigation.show {
+    display: flex;
+  }
+
+  .hamburger-menu {
+    display: inline-flex;
+    background: none;
+    border: none;
+    cursor: pointer;
+    z-index: 11;
+  }
+
+  .page-header {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+  .page-title h1 {
+    font-size: 1.2em;
+  }
+}
