--- a/subPage.css/blog-archive.css
+++ b/subPage.css/blog-archive.css
@@ -121,16 +121,15 @@
 }
 
 .blog-header {
-  padding: 20px;
   padding-bottom: 0;
   padding-top: 2.3em;
-  max-width: 1100px;
+  max-width: 1150px;
   margin: 0 auto;
   text-align: left;
 }
 
 .blog-header h1 {
-  border-bottom: 2px solid rgb(209, 209, 209);
+  border-bottom: 2px solid #5f8aa3;
   padding-bottom: 0.2em;
 }
 
@@ -162,4 +161,50 @@
 
 .card-link:hover {
   color: inherit;
+}
+
+/* Mobile view adjustments */
+@media (max-width: 768px) {
+  .custom-container {
+    width: 95%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+    margin: 0 auto;
+  }
+
+  .custom-post {
+    width: 90%;
+    max-width: 350px;
+    margin: 0 auto;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
+  }
+
+  .custom-header-post,
+  .custom-body-post {
+    width: 100%;
+  }
+
+  .blog-header {
+    padding: 1.5em 1em 0;
+    max-width: 100%;
+    text-align: center;
+    box-sizing: border-box;
+  }
+
+  .pagination {
+    margin: 15px 0;
+  }
+
+  .page-number {
+    margin: 0 5px;
+    padding: 5px 8px;
+  }
+
+  .blog-header h1 {
+    font-size: 1.5em;
+  }
 }
