--- a/subPage.css/contact.css
+++ b/subPage.css/contact.css
@@ -164,3 +164,75 @@ textarea::placeholder {
 .contact-icon svg {
   vertical-align: middle;
 }
+
+/* Mobile view adjustments */
+@media (max-width: 768px) {
+  .contact-wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1.5em;
+    gap: 1em;
+    max-width: 100%;
+  }
+
+  .contact-info {
+    width: 100%;
+    min-height: auto;
+    margin-left: 0;
+    padding: 1em;
+    box-sizing: border-box;
+    margin-bottom: 1em;
+  }
+
+  .contact-form-wrapper {
+    width: 100%;
+    margin-left: 0;
+    padding: 1.5em;
+    box-sizing: border-box;
+  }
+
+  .contact-info h2 {
+    font-size: 1.5em;
+    padding-bottom: 2em;
+  }
+
+  .contact-info p {
+    margin-bottom: 1em;
+    font-size: 1em;
+  }
+
+  .contact-form h2.contact-title {
+    font-size: 1.5em;
+  }
+
+  .contact-form p.contact-subtitle {
+    font-size: 0.9em;
+    margin-bottom: 1em;
+  }
+
+  .form-group label {
+    font-size: 0.9em;
+  }
+
+  .form-group input,
+  .form-group textarea {
+    padding: 0.5em;
+    font-size: 0.9em;
+  }
+
+  .send-button {
+    padding: 0.75em;
+    font-size: 1em;
+  }
+
+  .contact-item {
+    margin-left: 0;
+    font-size: 1em;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .contact-icon {
+    margin-bottom: 0.5em;
+  }
+}
