--- a/indexCSS/html.css
+++ b/indexCSS/html.css
@@ -1,20 +1,12 @@
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 html {
   scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-}
-
-main {
-  padding-top: 6em;
-}
-
-@media (max-width: 768px) {
-  main {
-    padding-top: 7em;
-  }
+  overflow-x: hidden;
 }
