--- a/indexCSS/profile-banner.css
+++ b/indexCSS/profile-banner.css
@@ -167,7 +167,6 @@
   }
 }
 
-/* Class to apply sliding effects */
 .slide-in-left {
   animation: slide-in-left 0.5s forwards;
 }
@@ -176,8 +175,62 @@
   animation: slide-in-right 0.5s forwards;
 }
 
-/* Initially hide the elements */
 .profile-photo,
 .profile-text {
   opacity: 0;
+}
+
+/* Mobile view adjustments */
+@media (max-width: 768px) {
+  .profile-banner-wrapper {
+    height: auto;
+    max-width: 90%;
+    margin: 1em auto;
+  }
+
+  .profile-banner {
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+  }
+
+  .profile-photo {
+    padding: 0.4em;
+    height: auto;
+    width: 100%;
+    max-width: 300px;
+    margin-bottom: 1em;
+  }
+
+  .splatter-image,
+  .profile-image {
+    border-radius: 15px;
+  }
+
+  .profile-text {
+    margin: 1em;
+    text-align: center;
+    opacity: 1;
+  }
+
+  .profile-h3 {
+    font-size: 1.8em;
+    text-align: center;
+  }
+
+  .profile-p {
+    font-size: 1em;
+    text-align: justify;
+    opacity: 1;
+    margin: 0.5em 0;
+  }
+
+  .profile-a {
+    position: relative;
+    bottom: auto;
+    right: auto;
+    font-size: 0.9em;
+    margin-top: 1em;
+    text-align: center;
+  }
 }
