--- a/indexCSS/services.css
+++ b/indexCSS/services.css
@@ -101,7 +101,9 @@
   .services-title-container {
     text-align: center;
     margin-bottom: 1.5em;
-    width: 80%;
+    margin-top: 0;
+    width: 90%;
+    padding: 0.5em;
   }
 
   .services-cards-container {
@@ -170,5 +172,15 @@
   .service-card.open .service-description {
     max-height: 500px;
     padding: 1em;
+  }
+
+  .services-description {
+    width: 100%;
+    text-align: justify;
+    font-size: 1em;
+  }
+
+  .services-title {
+    font-size: 1.6em;
   }
 }
