--- a/indexCSS/intro.css
+++ b/indexCSS/intro.css
@@ -7,11 +7,14 @@
 
 .banner-div {
   width: 100%;
+  height: 55vh;
+  position: relative;
 }
 
 .banner-div img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
   display: block;
 }
 
@@ -31,16 +34,16 @@
 
 .text-on-image {
   position: absolute;
-  top: 67%;
+  top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #cdd9e8;
   z-index: 2;
   font-size: 2.7em;
   text-shadow: 4px 4px 6px rgb(0, 0, 0);
-  white-space: nowrap;
   text-align: center;
 }
+
 .text-on-image::after {
   content: "";
   position: absolute;
@@ -58,7 +61,7 @@
   font-size: 0.5em;
   color: #cdd9e8;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-  white-space: nowrap;
+  text-align: center;
 }
 
 /* Mobile view adjustments for Intro Wrapper */
@@ -69,7 +72,7 @@
 
   .banner-div {
     position: relative;
-    height: 25vh;
+    height: 30vh;
     overflow: hidden;
   }
 
@@ -82,22 +85,26 @@
   }
 
   .text-on-image {
-    top: 55%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 1.5em;
     padding: 0.3em 1em;
-    white-space: none;
+    text-align: center;
+    white-space: nowrap;
   }
 
   .text-on-image::after {
     width: 80%;
-    bottom: 1em;
+    top: 45%;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 0.5em;
   }
 
   .subtext {
-    font-size: 0.8em;
+    font-size: 0.7em;
     text-align: center;
-    white-space: none;
+    white-space: nowrap;
   }
 }
