--- a/indexCSS/page-footer.css
+++ b/indexCSS/page-footer.css
@@ -4,7 +4,7 @@
   justify-content: center;
   padding: 2em 5em;
   padding-bottom: 0;
-  background-color: #5f8aa3;
+  background-color: var(--primary-color);
   width: 100%;
   position: relative;
   z-index: 10;
