--- a/subPage.css/contact.css
+++ b/subPage.css/contact.css
@@ -10,7 +10,7 @@
 }
 
 .contact-info {
-  background-color: #5f8aa3;
+  background-color: var(--primary-color);
   color: #fff;
   padding: 1.5em;
   width: 250px;
@@ -104,7 +104,7 @@ textarea::placeholder {
 .send-button {
   width: 100%;
   padding: 0.75em;
-  background-color: #5f8aa3;
+  background-color: var(--primary-color);
   color: #fff;
   font-size: 1em;
   border: none;
@@ -130,7 +130,7 @@ textarea::placeholder {
 }
 
 .send-button:hover {
-  background-color: #496b79;
+  background-color: var(--secondary-color);
 }
 
 #submission-error {
