--- a/indexCSS/page-header.css
+++ b/indexCSS/page-header.css
@@ -36,7 +36,7 @@
 
 .page-navigation h3 {
   margin-bottom: 0px;
-  padding-bottom: 2px;
+  padding-bottom: 8px;
 }
 
 .page-title {
@@ -89,6 +89,7 @@
   background-color: #cdd9e8;
   margin: 0 0.7em;
   margin-top: 1.1em;
+  margin-bottom: 8px;
 }
 
 /* Modern Dropdown Style */
